card titles, monthly cloud alignment fixed

--- a/code/style.css
+++ b/code/style.css
@@ -17,9 +17,9 @@ h3 {
 }
 
 h4 {
-  font-size: 32px;
+  font-size: 20px;
   font-weight: 100;
-  margin-top: -16px;
+  margin-top: 16px;
   margin-bottom: 16px;
 }
 
@@ -69,21 +69,21 @@ nav a {
   margin-left: 16px;
 }
 
+a:hover {
+  background-color: #ffffcc;
+  color: #000;
+}
 
 /* Monthly Cloud */
 .monthly-cloud .container {
-  padding: 50px;
-  margin: 16px;
   margin-top: 0;
+  padding: 100px 16px;
   background-color: #fff;
-  display: flex;
-  flex-direction: column;
   box-sizing: border-box;
-  justify-content: center;
 }
 
 .monthly-cloud img {
-  width: 100%;
+  width: 80%;
 }
 
 .monthly-cloud div h2 {
@@ -113,7 +113,7 @@ p.content {
   flex-wrap: wrap;
 }
 
-.cloud-cards a {
+.cloud-cards div {
   background: #fff;
   border: 2px solid #d5d5d5;
   border-radius: 10px;
@@ -124,19 +124,28 @@ p.content {
   margin-bottom: 32px;
 }
 
-a.high {
+.cloud-cards div:hover {
+  background-color: #ebe0e6;
+}
+
+div.high {
   box-shadow: 5px 5px 0 0 #d8eee6;
 }
-a.med {
+div.med {
   box-shadow: 5px 5px 0 0 #dbe6f0;
 }
-a.low {
+div.low {
   box-shadow: 5px 5px 0 0 #dbdbf0;
 }
 
-.cloud-cards a img {
+.cloud-cards div img {
   align-items: center;
-  width: 80%;
+  width: 200px;
+}
+
+.cloud-cards div {
+  border: 2px solid #d8eee6;
+  border-radius: 16px;
 }
 
 /* Footer */
@@ -157,7 +166,7 @@ footer a {
 }
 
 /* Media Queries */
-@media (min-width: 668px) {
+@media (min-width: 768px) {
   header {
       justify-content: space-between;
   }
@@ -167,35 +176,49 @@ footer a {
   }
 
   .logo-full {
-    display: inline;
-
+    display: inline-block;
   }
+
+  .cloud-card-container {
+      text-align: left;
+  }
+  .cloud-card-container .container {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .cloud-card-container img{
+    width: 180px;
+  }
+
+  .cloud-cards div {
+  width: 250px;
+  flex-grow: 1;
+  margin: 16px;
+  }
+}
+
+/* desktop */
+@media (min-width: 900px) {
   nav {
-      display: inline-block;
+    display: inline-block;
   }
 
   .hamburger {
       display: none;
   }
 
-  .cloud-card-container {
-      text-align: left;
-  }
-}
-
-/* desktop */
-@media (min-width: 900px) {
   .cloud-card-container .container {
       flex-direction: row;
       align-items: center;
   }
 
   .cloud-card-container img{
-      width: 25%;
+      width: 180px;
   }
 
-  .cloud-cards a {
-    width: 20%;
+  .cloud-cards div {
+    width: 200px;
     flex-grow: 1;
     margin: 16px;
   }
